...
          ),
        }}
      />
      <Tabs.Screen
        name="inbox"
        options={{
          title: 'Inbox',
          tabBarIcon: ({ color }) => (
            <MessageSquare size={TAB_ICON_SIZE} color={color} />
          ),
        }}
      />
      <Tabs.Screen
...
